<resources>
    <string name="app_name">HAFILATI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="message">message</string>
    <string name="turn_off_flashlight">turn_off_flashlight</string>
    <string name="turn_on_flashlight">turn_on_flashlight</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="Time">Time</string>
    <string name="from">From</string>
    <string name="todo">TODO</string>
    <string name="Search">Search</string>
    <string name="api_prefix">http://192.168.43.76:8080/api/</string>
    <string name="to">To</string>
    <string name="depart">Depart</string>
    <string name="arriv">Arrivé</string>
    <string name="zouaghi_sliman">zouaghi sliman</string>
    <string name="confirmpassword">confirm password</string>
    <string name="password">password</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="NumberBus">NmberBus</string>
    <string name="linename">Line</string>


    <!--<string name="api_prefix">http://localhost:8000/api/</string>-->
</resources>
