<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    >

    <LinearLayout
        android:id="@+id/drag_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
       >


        <EditText
            android:id="@+id/addressOne"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:hint="@string/from"
            android:inputType="text"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textColorHint="@color/white"
            android:padding="@dimen/spacing_middle" />

        <EditText
            android:id="@+id/addressTwo"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:hint="@string/to"
            android:inputType="text"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textColorHint="@color/white"
           />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="15dp">
</LinearLayout>

        <Button
            android:id="@+id/recherchebutton"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/bgbtn"
            android:text="@string/Search"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
