<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"

        >

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <android.support.v7.widget.SearchView
                android:id="@+id/mSearchBus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:background="?attr/colorPrimary"
                app:defaultQueryHint="Search..">

            </android.support.v7.widget.SearchView>

        </android.support.design.widget.CoordinatorLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:textColor="@color/black"
            android:text="@string/NumberBus"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:textColor="@color/black"
            android:text="@string/linename"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="40dp"
            android:textColor="@color/black"
            android:layout_weight="10"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/Time" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerviewBus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e7e9e9"
        android:dividerHeight="@null"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</LinearLayout>
