<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignUpAct">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:lineSpacingExtra="6dp"
        android:text="Sign Up"
        android:textColor="#FFF"
        android:textSize="42sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bginput"
        android:hint="@string/firstname"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="#87ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <EditText
        android:id="@+id/editText5"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bginput"
        android:hint="@string/lastname"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:textColorHint="#87ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bginput"
        android:hint="@string/confirmpassword"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:textColorHint="#87ffffff"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bginput"
        android:hint="@string/password"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:inputType="textPassword"
        android:textColorHint="#87ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bginput"
        android:hint="Email Address"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="#87ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/btnjoin"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bginput"
        android:text="Join Today"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />


</android.support.constraint.ConstraintLayout>